--- a/brend_doo/src/App.css
+++ b/brend_doo/src/App.css
@@ -40,22 +40,15 @@
 .read-the-docs {
     color: #888;
 }
-.custom-scrollbar::-webkit-scrollbar {
-    width: 6px; /* Width of the scrollbar */
-}
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #888; /* Scrollbar thumb color */
-    border-radius: 10px; /* Rounded corners */
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Color on hover */
-}
 .swiper-cursor-grab {
     cursor: grab;
 }
 
 .swiper-cursor-grabbing {
     cursor: grabbing;
+}
+.custom-scrollbar::-webkit-scrollbar {
+    width: 2px;
+    border-radius: 8px;
 }
