--- a/brend_doo/src/App.css
+++ b/brend_doo/src/App.css
@@ -49,6 +49,18 @@
     cursor: grabbing;
 }
 .custom-scrollbar::-webkit-scrollbar {
-    width: 2px;
-    border-radius: 8px;
+    width: 2px; /* Width for vertical scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker color when hovered */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent; /* Transparent track */
 }
