--- a/brend_doo/src/App.css
+++ b/brend_doo/src/App.css
@@ -48,19 +48,41 @@
 .swiper-cursor-grabbing {
     cursor: grabbing;
 }
-.custom-scrollbar::-webkit-scrollbar {
-    width: 2px; /* Width for vertical scrollbar */
+/* .custom-scrollbar::-webkit-scrollbar {
+    width: 2px; 
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #888; /* Color of the scrollbar thumb */
-    border-radius: 10px; /* Rounded corners */
+    background-color: #888; 
+    border-radius: 10px; 
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Darker color when hovered */
+    background-color: #555; 
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: transparent; /* Transparent track */
+    background-color: transparent; 
+} */
+.custom-scrollbar {
+    max-height: 150px;
+    overflow-y: scroll;
+
+    /* WebKit-based browsers (Chrome, Edge, Safari) */
+    --webkit-scrollbar-width: thin;
+}
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #edf2f7; /* Track color */
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #a0aec0; /* Thumb color */
+    border-radius: 8px; /* Rounded corners for the thumb */
+}
+
+.custom-scrollbar {
+    scrollbar-width: thin; /* Thin scrollbar for Firefox */
+    scrollbar-color: #a0aec0 #edf2f7; /* Thumb and track colors for Firefox */
 }
